--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta property="og:site_name" content="Prueba_Pato">
-    <meta property="og:title" content="Mi Primera pagina en Whatsapp" />
-    <meta property="og:description" content="aqui voy a poner todo lo que se tiene que ver" />
+    <meta property="og:title" content="Aqui va el Titulo Prima" />
+    <meta property="og:description" content="Aqui va la Descripcion que puede ser mas larga, tambien hay que pensar que imagen ponemos al costado para que no salga mi cara 😁" />
     <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Pato045/casamiento/master/assets/pato.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
