--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <title>Hola, Gabi!</title>
+    
   </head>
   <body>
     <h1>Hola, Gabi!</h1>
-
+    <p>Esta es una simulacion de la Pagina que hay que hacer, aqui hay se puede poner todo lo que quieras, con los colores y letras e imagenes que mas te gusten.</p>
+    <p>Esta prueba era para ver como sale en whatsapp cuando lo compartis, por que nunca habia hecho eso, ahora que lo se hacer, le voy a sacar unos pesitos en el trabajo 🤑...</p>
+    <p>Ahora esta re pelada la pagina pero la proxima ya va a tener mas contenido, vos seguime pasando tus ideas y vemos que sale.</p>
+    <p>Bueno Chau 😘</p>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
