prueba de maps y numeros de whatsapp

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <br>
         <p>Viernes 24 de Mayo a las 21hs</p>
         <p class="text-right">Parroquia Nuestra Señora de Fatima.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.61105806899!2d-66.84676908522059!3d-29.41093200905907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427da480ddd4da7%3A0xdb1d99c92b354619!2sPARROQUIA+NTA+SRA+DE+FATIMA!5e0!3m2!1ses-419!2sar!4v1555296126571!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         <p>Sabado 25 de Mayo a las 12:30hs</p>
         <p class="text-right">Civil y Brindis en De La Cruz Eventos.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950.761703246235!2d-66.916232!3d-29.417663299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dd016b4a3a53%3A0x25ff5e5054242f99!2sDeLa+Cruz+Eventos!5e0!3m2!1ses-419!2sar!4v1555296304316!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         <br>
       </div>
       <!--Confirmar Presencia-->
@@ -51,7 +53,9 @@
         <p><strong>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:</strong><p>
         <br>
         <p class="text-center"><strong>Lucas:   </strong>0<strong>380</strong> 15<strong>4665988</strong></p>
+        <a href="https://wa.me/5493804665988">Whatsapp a Lucas</a>
         <p class="text-center"><strong>Gaby :   </strong>0<strong>380</strong> 15<strong>4225215</strong></p>        
+        <a href="https://wa.me/5493804225215">Whatsapp a Gaby</a>
         <br>
       </div>
       <!--Cierre-->
