se corrigio la imagen de talampaya y los link a los whatsapp

--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
       <div class="quote text-dark">
         <p><strong>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:</strong><p>
         <br>
-        <p class="text-center"><strong>Lucas:   </strong>0<strong>380</strong> 15<strong>4665988</strong></p>
-        <a href="https://wa.me/5493804665988">Whatsapp a Lucas</a>
-        <p class="text-center"><strong>Gaby :   </strong>0<strong>380</strong> 15<strong>4225215</strong></p>        
-        <a href="https://wa.me/5493804225215">Whatsapp a Gaby</a>
+        <p class="text-center"><a href="https://wa.me/5493804665988"><strong>Lucas:   </strong>0<strong>380</strong> 15<strong>4665988</strong></a></p>
+        <p class="text-center"><a href="https://wa.me/5493804225215"><strong>Gaby :   </strong>0<strong>380</strong> 15<strong>4225215</strong></a></p>        
         <br>
       </div>
       <!--Cierre-->
