--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <meta property="og:site_name" content="Gaby y Lucas">
     <meta property="og:title" content="Tengo algo importante que anunciar:" />
     <meta property="og:description" content="Toque aquí para ver de que se trata 😁" />
-    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/Pato045/casamiento/master/assets/icon.png">
+    <meta property="og:image" itemprop="image" 
+      content="/preview.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <title>Hola, Gabi!</title>
+    <title>Nos Casamos</title>
     
   </head>
   <body>
