--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <meta property="og:site_name" content="Gaby y Lucas">
-    <meta property="og:title" content="Tengo algo importante que anunciar:" />
-    <meta property="og:description" content="Toque aquí para ver de que se trata 😁" />
+    <meta property="og:title" content="Gabriela y Lucas" />
+    <meta property="og:description" content="Por favor toque aqui para ingresar." />
     <meta property="og:image" itemprop="image" 
       content="/preview.jpg">
     <meta property="og:type" content="website" />
