--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Gabriela y Lucas" />
     <meta property="og:description" content="Por favor toque aqui para ingresar." />
     <meta property="og:image" itemprop="image" 
-      content=".\assets\preview.jpg">
+      content="preview.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
 
