Ultima version de prueba

--- a/index.html
+++ b/index.html
@@ -16,56 +16,76 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Nos Casamos</title>
     
   </head>
   <body>
-    <div>
+    <div class="container">
       <!--Apertura-->
-      <div class="talampaya">
-          <h1 class="title text-center text-dark rellax" data-rellax-speed="-5">¡Nos Casamos!</h1>
+      <div class="main">
+        <h1 class="title text-center text-light rellax" data-rellax-speed="-5">¡Nos Casamos!</h1>
+        <!-- <br>
+        <p class="title text-center text-light rellax" data-rellax-speed="-2">⏬</p> -->
+        <!--
         <br>
         <h2 class="sub-title text-left text-light rellax" data-rellax-speed="-3">Gaby</h2>
         <h2 class="sub-title text-center rellax" data-rellax-speed="-1.5">💞</h2>
-        <h2 class="sub-title text-right text-light rellax" data-rellax-speed="0">Lucas</h2>    
+        <h2 class="sub-title text-right text-light rellax" data-rellax-speed="0">Lucas</h2>-->
       </div>
       <!--Frase-->
-      <div class="colibri quote text-center text-pink">
-        <p class="rellax" data-rellax-speed="-2">Tenngo un verso amanecido para ti,</p>
-        <p class="rellax" data-rellax-speed="-2">tengo un canto madurado de silencio</p>
-        <p class="rellax" data-rellax-speed="-2">y una vida fecundada en la esperanza</p>
-        <p class="rellax" data-rellax-speed="-2">del amor que al mirarte, presentí.</p>
-        <p class="text-right rellax" data-rellax-speed="-2">E. Lopez</p>
+      <div class="padding quote text-center text-teal">
+        <p class="rellax" data-rellax-speed="-1">Tenngo un verso amanecido para ti,</p>
+        <p class="rellax" data-rellax-speed="-1">tengo un canto madurado de silencio</p>
+        <p class="rellax" data-rellax-speed="-1">y una vida fecundada en la esperanza</p>
+        <p class="rellax" data-rellax-speed="-1">del amor que al mirarte, presentí.</p>
+        <p class="text-right rellax" data-rellax-speed="-1">E. Lopez</p>
       </div>
       <!--Invitacion-->
-      <div class="text-dark">
-        <p class="quote"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
+      <div class="padding">
+        <p class="quote text-blue " data-rellax-speed="-2"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
         <br>
-        <p>Viernes 24 de Mayo a las 21hs</p>
-        <p class="text-right">Parroquia Nuestra Señora de Fatima.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.61105806899!2d-66.84676908522059!3d-29.41093200905907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427da480ddd4da7%3A0xdb1d99c92b354619!2sPARROQUIA+NTA+SRA+DE+FATIMA!5e0!3m2!1ses-419!2sar!4v1555296126571!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <p>Viernes 24 de Mayo a las 20:45hs</p>
+        <p class="text-right">
+          <a href="https://goo.gl/maps/4kd6ADzCcV249weW9" 
+            class="text-right link rellax" 
+            data-rellax-speed="-2">
+              Parroquia Nuestra Señora de Fatima. 
+              <i class="fas fa-map-marker-alt text-red"></i>
+          </a>
+        </p>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.61105806899!2d-66.84676908522059!3d-29.41093200905907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427da480ddd4da7%3A0xdb1d99c92b354619!2sPARROQUIA+NTA+SRA+DE+FATIMA!5e0!3m2!1ses-419!2sar!4v1555296126571!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+        <br>
         <p>Sabado 25 de Mayo a las 12:30hs</p>
-        <p class="text-right">Civil y Brindis en De La Cruz Eventos.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950.761703246235!2d-66.916232!3d-29.417663299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dd016b4a3a53%3A0x25ff5e5054242f99!2sDeLa+Cruz+Eventos!5e0!3m2!1ses-419!2sar!4v1555296304316!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <p class="text-right">
+          <a href="https://goo.gl/maps/uaySNXhkXmvXsvWR6" class="text-right link rellax" data-rellax-speed="-2">Civil y Brindis en De La Cruz Eventos. 
+            <i class="fas fa-map-marker-alt text-red"></i>
+          </a>
+        </p>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950.761703246235!2d-66.916232!3d-29.417663299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dd016b4a3a53%3A0x25ff5e5054242f99!2sDeLa+Cruz+Eventos!5e0!3m2!1ses-419!2sar!4v1555296304316!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         <br>
       </div>
-      <!--Confirmar Presencia-->
-      <div class="quote text-dark">
-        <p><strong>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:</strong><p>
+      <!-- Confirmar Presencia -->
+      <div class="padding text-blue">
+        <p>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:<p>
         <br>
-        <p class="text-center"><a href="https://wa.me/5493804665988"><strong>Lucas:   </strong>0<strong>380</strong> 15<strong>4665988</strong></a></p>
-        <p class="text-center"><a href="https://wa.me/5493804225215"><strong>Gaby :   </strong>0<strong>380</strong> 15<strong>4225215</strong></a></p>        
+        <p class="text-center"><a class="link" href="https://wa.me/5493804665988"><strong>Lucas:   (</strong>0<strong>380)</strong> 15<strong>4665988</strong> <span class="text-green"><i class="fab fa-whatsapp"></i></span></a></p>
+        <br>
+        <p class="text-center"><a class="link" href="https://wa.me/5493804225215"><strong>Gaby:    (</strong>0<strong>380)</strong> 15<strong>4225215</strong> <span class="text-green"><i class="fab fa-whatsapp"></i></span></a></p>        
         <br>
       </div>
       <!--Cierre-->
-      <div class="novios quote text-center text-light">
-        <p class="rellax" data-rellax-speed="-1.5">El amor es paciente, es servicial...</p>
-        <p class="rellax" data-rellax-speed="-1.5">Todo lo cree de la mano de Dios ❤</p>
+      <div class="novios text-center text-white">
+          <p class="rellax" data-rellax-speed="-1">El amor es paciente,</p>
+          <p class="rellax" data-rellax-speed="-1">es servicial,</p>
+          <p class="rellax" data-rellax-speed="-1">es bondadoso,</p>
+          <p class="rellax" data-rellax-speed="-1">todo lo espera...<span class="text-red">❤</span></p>
+          <p class="text-right rellax" data-rellax-speed="-1">(Corintios 13-13)</p> 
       </div>
     </div>
     <script src="assets/rellax.min.js"></script>
     <script>
-      var rellax = new Rellax('.rellax');
+      //var rellax = new Rellax('.rellax');
     </script>
   </body>
 </html>
