se agrego bulma

--- a/index.html
+++ b/index.html
@@ -15,23 +15,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Nos Casamos</title>
     
   </head>
   <body>
-    <div class="container">
+    <div >
       <!--Apertura-->
       <div class="main">
-        <h1 class="title text-center text-light rellax" data-rellax-speed="-5">¡Nos Casamos!</h1>
-        <!-- <br>
-        <p class="title text-center text-light rellax" data-rellax-speed="-2">⏬</p> -->
-        <!--
-        <br>
-        <h2 class="sub-title text-left text-light rellax" data-rellax-speed="-3">Gaby</h2>
-        <h2 class="sub-title text-center rellax" data-rellax-speed="-1.5">💞</h2>
-        <h2 class="sub-title text-right text-light rellax" data-rellax-speed="0">Lucas</h2>-->
+        <h1 class="titulo text-center text-light rellax" data-rellax-speed="-5">¡Nos Casamos!</h1>
       </div>
       <!--Frase-->
       <div class="padding quote text-center text-teal">
@@ -64,6 +58,26 @@
         </p>
         <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950.761703246235!2d-66.916232!3d-29.417663299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dd016b4a3a53%3A0x25ff5e5054242f99!2sDeLa+Cruz+Eventos!5e0!3m2!1ses-419!2sar!4v1555296304316!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         <br>
+        <div class="columns">
+          <div class="column">
+              <div class="card">
+                  <div class="card-header">
+                    <p class="card-header-title is-centered is-5"asd><i class="fas fa-glass-cheers"></i></p>
+                  </div>
+                  <div class="card-content">
+                    <p class="title is-4">Ceremonia Religiosa</p>
+                    <p>Viernes 24 de Mayo</p>
+                    <p>Horario: 20:45hs</p>
+                    <a class="button is-centered">
+                      <span class="icon">
+                        <i class="fas fa-map-marker-alt text-red"></i>
+                      </span>
+                      <span>Como llegar</span>
+                    </a>
+                  </div>
+                </div>
+          </div>
+        </div>
       </div>
       <!-- Confirmar Presencia -->
       <div class="padding text-blue">
