se eliminaron comentarios y rellax

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <div >
       <!--Apertura-->
       <div class="main">
-        <h1 class="titulo text-center text-light rellax" data-rellax-speed="-5">¡Nos Casamos!</h1>
+        <h1 class="titulo text-center text-light">¡Nos Casamos!</h1>
       </div>
       <!--Frase-->
       <div class="padding quote text-center text-teal">
-        <p class="rellax" data-rellax-speed="-1">Tenngo un verso amanecido para ti,</p>
-        <p class="rellax" data-rellax-speed="-1">tengo un canto madurado de silencio</p>
-        <p class="rellax" data-rellax-speed="-1">y una vida fecundada en la esperanza</p>
-        <p class="rellax" data-rellax-speed="-1">del amor que al mirarte, presentí.</p>
-        <p class="text-right rellax" data-rellax-speed="-1">E. Lopez</p>
+        <p>Tenngo un verso amanecido para ti,</p>
+        <p>tengo un canto madurado de silencio</p>
+        <p>y una vida fecundada en la esperanza</p>
+        <p>del amor que al mirarte, presentí.</p>
+        <p class="text-right">E. Lopez</p>
       </div>
       <!--Invitacion-->
       <div class="padding">
-        <p class="quote text-blue " data-rellax-speed="-2"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
+        <p class="quote text-blue"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
         <br>
         <p>Viernes 24 de Mayo a las 20:45hs</p>
         <p class="text-right">
@@ -48,7 +48,6 @@
               <i class="fas fa-map-marker-alt text-red"></i>
           </a>
         </p>
-        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.61105806899!2d-66.84676908522059!3d-29.41093200905907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427da480ddd4da7%3A0xdb1d99c92b354619!2sPARROQUIA+NTA+SRA+DE+FATIMA!5e0!3m2!1ses-419!2sar!4v1555296126571!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         <br>
         <p>Sabado 25 de Mayo a las 12:30hs</p>
         <p class="text-right">
@@ -56,7 +55,6 @@
             <i class="fas fa-map-marker-alt text-red"></i>
           </a>
         </p>
-        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950.761703246235!2d-66.916232!3d-29.417663299999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dd016b4a3a53%3A0x25ff5e5054242f99!2sDeLa+Cruz+Eventos!5e0!3m2!1ses-419!2sar!4v1555296304316!5m2!1ses-419!2sar" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         <br>
         <div class="columns">
           <div class="column">
@@ -90,16 +88,12 @@
       </div>
       <!--Cierre-->
       <div class="novios text-center text-white">
-          <p class="rellax" data-rellax-speed="-1">El amor es paciente,</p>
-          <p class="rellax" data-rellax-speed="-1">es servicial,</p>
-          <p class="rellax" data-rellax-speed="-1">es bondadoso,</p>
-          <p class="rellax" data-rellax-speed="-1">todo lo espera...<span class="text-red">❤</span></p>
-          <p class="text-right rellax" data-rellax-speed="-1">(Corintios 13-13)</p> 
+          <p>El amor es paciente,</p>
+          <p>es servicial,</p>
+          <p>es bondadoso,</p>
+          <p>todo lo espera...<span class="text-red">❤</span></p>
+          <p class="text-right">(Corintios 13-13)</p> 
       </div>
     </div>
-    <script src="assets/rellax.min.js"></script>
-    <script>
-      //var rellax = new Rellax('.rellax');
-    </script>
   </body>
 </html>
