cambios en los botones

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta property="og:updated_time" content="1440432930" />
 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +23,7 @@
   <body>
     <div >
       <!--Apertura-->
-      <div class="main">
+      <div class="principal">
         <h1 class="titulo text-center text-light">¡Nos Casamos!</h1>
       </div>
       <!--Frase-->
@@ -39,41 +38,46 @@
       <div class="padding">
         <p class="quote text-blue"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
         <br>
-        <p>Viernes 24 de Mayo a las 20:45hs</p>
-        <p class="text-right">
-          <a href="https://goo.gl/maps/4kd6ADzCcV249weW9" 
-            class="text-right link rellax" 
-            data-rellax-speed="-2">
-              Parroquia Nuestra Señora de Fatima. 
-              <i class="fas fa-map-marker-alt text-red"></i>
-          </a>
-        </p>
-        <br>
-        <p>Sabado 25 de Mayo a las 12:30hs</p>
-        <p class="text-right">
-          <a href="https://goo.gl/maps/uaySNXhkXmvXsvWR6" class="text-right link rellax" data-rellax-speed="-2">Civil y Brindis en De La Cruz Eventos. 
-            <i class="fas fa-map-marker-alt text-red"></i>
-          </a>
-        </p>
-        <br>
         <div class="columns">
           <div class="column">
-              <div class="card">
-                  <div class="card-header">
-                    <p class="card-header-title is-centered is-5"asd><i class="fas fa-glass-cheers"></i></p>
-                  </div>
-                  <div class="card-content">
-                    <p class="title is-4">Ceremonia Religiosa</p>
-                    <p>Viernes 24 de Mayo</p>
-                    <p>Horario: 20:45hs</p>
-                    <a class="button is-centered">
-                      <span class="icon">
-                        <i class="fas fa-map-marker-alt text-red"></i>
-                      </span>
-                      <span>Como llegar</span>
-                    </a>
-                  </div>
-                </div>
+            <div class="card">
+              <div class="card-header">
+                <p class="card-header-title is-centered is-5"asd><i class="fas fa-church"></i></p>
+              </div>
+              <div class="card-content">
+                <p class="title is-4">Ceremonia Religiosa</p>
+                <p>Parroquia Nuestra Señora de Fatima</p>
+                <p>Fecha: Viernes 24 de Mayo</p>
+                <p>Hora: 20:45hs</p>
+                <br>
+                <a href="https://goo.gl/maps/4kd6ADzCcV249weW9" class="button is-centered">
+                  <span class="icon">
+                    <i class="fas fa-map-marker-alt text-red"></i>
+                  </span>
+                  <span>Como llegar</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="card">
+              <div class="card-header">
+                <p class="card-header-title is-centered is-5"asd><i class="fas fa-glass-cheers"></i></p>
+              </div>
+              <div class="card-content">
+                <p class="title is-4">Civil y Brindis</p>
+                <p>Lugar: De La Cruz Eventos</p>
+                <p>Fecha: Viernes 25 de Mayo</p>
+                <p>Hora: 12:30hs</p>
+                <br>
+                <a href="https://goo.gl/maps/uaySNXhkXmvXsvWR6" class="button is-centered">
+                  <span class="icon">
+                    <i class="fas fa-map-marker-alt text-red"></i>
+                  </span>
+                  <span>Como llegar</span>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -81,9 +85,21 @@
       <div class="padding text-blue">
         <p>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:<p>
         <br>
-        <p class="text-center"><a class="link" href="https://wa.me/5493804665988"><strong>Lucas:   (</strong>0<strong>380)</strong> 15<strong>4665988</strong> <span class="text-green"><i class="fab fa-whatsapp"></i></span></a></p>
+        <p class="text-center"><strong>Lucas:   (</strong>0<strong>380)</strong> 15<strong>4665988</strong></p>
+        <a href="https://wa.me/5493804665988" class="button is-centered">
+          <span class="icon">
+              <i class="fab fa-whatsapp text-green"></i>
+          </span>
+          <span>Enviar Whatsapp</span>
+        </a>
         <br>
-        <p class="text-center"><a class="link" href="https://wa.me/5493804225215"><strong>Gaby:    (</strong>0<strong>380)</strong> 15<strong>4225215</strong> <span class="text-green"><i class="fab fa-whatsapp"></i></span></a></p>        
+        <p class="text-center"><strong>Gaby:    (</strong>0<strong>380)</strong> 15<strong>4225215</strong></p>        
+        <a href="https://wa.me/5493804225215" class="button is-centered">
+          <span class="icon">
+              <i class="fab fa-whatsapp text-green"></i>
+          </span>
+          <span>Enviar Whatsapp</span>
+        </a>
         <br>
       </div>
       <!--Cierre-->
