ultimo cambio de hoy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
   </head>
   <body>
-    <div >
+    <div class="container">
       <!--Apertura-->
       <div class="principal">
         <h1 class="titulo text-center text-light">¡Nos Casamos!</h1>
@@ -36,13 +36,13 @@
       </div>
       <!--Invitacion-->
       <div class="padding">
-        <p class="quote text-blue"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
+        <p class="text-blue"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
         <br>
         <div class="columns">
           <div class="column">
             <div class="card">
               <div class="card-header">
-                <p class="card-header-title is-centered is-5"asd><i class="fas fa-church"></i></p>
+                <p class="card-header-title is-centered text-yellow"asd><i class="fas fa-church fa-10x"></i></p>
               </div>
               <div class="card-content">
                 <p class="title is-4">Ceremonia Religiosa</p>
@@ -50,7 +50,9 @@
                 <p>Fecha: Viernes 24 de Mayo</p>
                 <p>Hora: 20:45hs</p>
                 <br>
-                <a href="https://goo.gl/maps/4kd6ADzCcV249weW9" class="button is-centered">
+              </div>
+              <div class="card-footer">
+                <a href="https://goo.gl/maps/4kd6ADzCcV249weW9" class="card-footer-item button">
                   <span class="icon">
                     <i class="fas fa-map-marker-alt text-red"></i>
                   </span>
@@ -60,17 +62,18 @@
             </div>
           </div>
           <div class="column">
-            <div class="card">
+            <div class="card is-centered">
               <div class="card-header">
-                <p class="card-header-title is-centered is-5"asd><i class="fas fa-glass-cheers"></i></p>
+                <p class="card-header-title is-centered text-green"asd><i class="fas fa-glass-cheers fa-10x"></i></p>
               </div>
               <div class="card-content">
                 <p class="title is-4">Civil y Brindis</p>
                 <p>Lugar: De La Cruz Eventos</p>
                 <p>Fecha: Viernes 25 de Mayo</p>
                 <p>Hora: 12:30hs</p>
-                <br>
-                <a href="https://goo.gl/maps/uaySNXhkXmvXsvWR6" class="button is-centered">
+              </div>
+              <div class="card-footer">
+                <a href="https://goo.gl/maps/uaySNXhkXmvXsvWR6" class="card-footer-item button">
                   <span class="icon">
                     <i class="fas fa-map-marker-alt text-red"></i>
                   </span>
