refinados los estilos

--- a/index.html
+++ b/index.html
@@ -20,29 +20,33 @@
     <title>Nos Casamos</title>
     
   </head>
-  <body>
-    <div class="container">
-      <!--Apertura-->
-      <div class="principal">
-        <h1 class="titulo text-center text-light">¡Nos Casamos!</h1>
+  <body class="has-background-black-ter">
+    <!--Apertura-->
+    <div class="novios">
+      <h1 class="titulo has-text-centered has-text-light">¡Nos Casamos!</h1>
+    </div>
+    <!--Frase-->
+    <div class="section">
+      <div class="container"> 
+        <div class="poema has-text-centered has-text-primary">
+          <p>"Tenngo un verso amanecido para ti,</p>
+          <p>tengo un canto madurado de silencio</p>
+          <p>y una vida fecundada en la esperanza</p>
+          <p>del amor que al mirarte, presentí"</p>
+          <p class="has-text-right">E. Lopez</p>
+        </div>
       </div>
-      <!--Frase-->
-      <div class="padding quote text-center text-teal">
-        <p>Tenngo un verso amanecido para ti,</p>
-        <p>tengo un canto madurado de silencio</p>
-        <p>y una vida fecundada en la esperanza</p>
-        <p>del amor que al mirarte, presentí.</p>
-        <p class="text-right">E. Lopez</p>
-      </div>
-      <!--Invitacion-->
-      <div class="padding">
-        <p class="text-blue"><strong>Queremos invitarte a compartir con nosotros este momento:</strong></p>
+    </div>
+    <!--Invitacion-->
+    <div class="section">
+      <div class="container">
+        <p class="has-text-light has-text-weight-normal is-uppercase">Queremos invitarte a compartir con nosotros este momento:</p>
         <br>
         <div class="columns">
           <div class="column">
             <div class="card">
-              <div class="card-header">
-                <p class="card-header-title is-centered text-yellow"asd><i class="fas fa-church fa-10x"></i></p>
+              <div class="card-header has-background-warning">
+                <p class="card-header-title is-centered has-text-light"asd><i class="fas fa-church fa-10x"></i></p>
               </div>
               <div class="card-content">
                 <p class="title is-4">Ceremonia Religiosa</p>
@@ -54,7 +58,7 @@
               <div class="card-footer">
                 <a href="https://goo.gl/maps/4kd6ADzCcV249weW9" class="card-footer-item button">
                   <span class="icon">
-                    <i class="fas fa-map-marker-alt text-red"></i>
+                    <i class="fas fa-map-marker-alt has-text-danger"></i>
                   </span>
                   <span>Como llegar</span>
                 </a>
@@ -63,19 +67,19 @@
           </div>
           <div class="column">
             <div class="card is-centered">
-              <div class="card-header">
-                <p class="card-header-title is-centered text-green"asd><i class="fas fa-glass-cheers fa-10x"></i></p>
+              <div class="card-header has-background-success">
+                <p class="card-header-title is-centered has-text-light"asd><i class="fas fa-glass-cheers fa-10x"></i></p>
               </div>
               <div class="card-content">
                 <p class="title is-4">Civil y Brindis</p>
                 <p>Lugar: De La Cruz Eventos</p>
-                <p>Fecha: Viernes 25 de Mayo</p>
+                <p>Fecha: Sabado 25 de Mayo</p>
                 <p>Hora: 12:30hs</p>
               </div>
               <div class="card-footer">
                 <a href="https://goo.gl/maps/uaySNXhkXmvXsvWR6" class="card-footer-item button">
                   <span class="icon">
-                    <i class="fas fa-map-marker-alt text-red"></i>
+                    <i class="fas fa-map-marker-alt has-text-danger"></i>
                   </span>
                   <span>Como llegar</span>
                 </a>
@@ -84,35 +88,39 @@
           </div>
         </div>
       </div>
-      <!-- Confirmar Presencia -->
-      <div class="padding text-blue">
-        <p>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:<p>
-        <br>
-        <p class="text-center"><strong>Lucas:   (</strong>0<strong>380)</strong> 15<strong>4665988</strong></p>
-        <a href="https://wa.me/5493804665988" class="button is-centered">
-          <span class="icon">
-              <i class="fab fa-whatsapp text-green"></i>
-          </span>
-          <span>Enviar Whatsapp</span>
-        </a>
-        <br>
-        <p class="text-center"><strong>Gaby:    (</strong>0<strong>380)</strong> 15<strong>4225215</strong></p>        
-        <a href="https://wa.me/5493804225215" class="button is-centered">
-          <span class="icon">
-              <i class="fab fa-whatsapp text-green"></i>
-          </span>
-          <span>Enviar Whatsapp</span>
-        </a>
-        <br>
+    </div>
+    <!-- Confirmar Presencia -->
+    <div class="section">
+      <div class="container">
+        <div class="has-text-light is-uppercase">
+          <p>Por favor confirmar su presencia hasta el 3 de Mayo, a los siguientes telefonos:<p>
+          <br>
+          <p>Lucas:   (0 380) 15 4665988</p>
+          <a href="https://wa.me/5493804665988" class="button is-success is-fullwidth has-text-centered">
+            <span class="icon">
+                <i class="fab fa-whatsapp has-text-light"></i>
+            </span>
+            <span>Enviar Whatsapp a Lucas</span>
+          </a>
+          <p><br></p>
+          <p>Gaby:    (0 380) 15 4225215</p>        
+          <a href="https://wa.me/5493804225215" class="button is-success is-fullwidth has-text-centered">
+            <span class="icon">
+                <i class="fab fa-whatsapp has-text-light"></i>
+            </span>
+            <span>Enviar Whatsapp a Gaby</span>
+          </a>
+          <br>
+        </div>
       </div>
-      <!--Cierre-->
-      <div class="novios text-center text-white">
-          <p>El amor es paciente,</p>
-          <p>es servicial,</p>
-          <p>es bondadoso,</p>
-          <p>todo lo espera...<span class="text-red">❤</span></p>
-          <p class="text-right">(Corintios 13-13)</p> 
-      </div>
+    </div>
+    <!--Cierre-->
+    <div class="colibri corintios has-text-centered has-text-white has-text-weight-bold	">
+        <p>El amor es paciente,</p>
+        <p>es servicial,</p>
+        <p>es bondadoso,</p>
+        <p>todo lo espera...<span class="has-text-danger">❤</span></p>
+        <p class="has-text-right">(Corintios 13-13)</p> 
     </div>
   </body>
 </html>
