--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>es servicial,</p>
         <p>es bondadoso,</p>
         <p>todo lo espera...<span class="has-text-danger">❤</span></p>
-        <p class="has-text-right">(Corintios 13-13)</p> 
+        <p class="has-text-right">(Corintios 13-13)</p> <br><br><br>
     </div>
   </body>
 </html>
